tests/snapshots/test_enum__hir__enum_empty.snap
---
source: tests/test-enum.rs
expression: hir
---
Specification(
    [
        ConstrTypeDcl(
            EnumDcl(
                EnumDcl {
                    ident: "A",
                    member: [],
                },
            ),
        ),
    ],
)
