tests/snapshots/test_enum__hir__enum_simple.snap
---
source: tests/test-enum.rs
expression: hir
---
Specification(
    [
        ConstrTypeDcl(
            EnumDcl(
                EnumDcl {
                    ident: "A",
                    member: [
                        "B",
                        "C",
                    ],
                },
            ),
        ),
    ],
)
